<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SipDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_fifqi">*</string>
    <string name="number_0">0</string>
    <string name="number_diez">#</string>
    
    <string name="phone_call">Call</string>
    <string name="phone_clear">Clear</string>
    <string name="phone_cancel">Cancel</string>

</resources>
