<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1" >

    <TableRow>

        <TextView
            android:id="@+id/number_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:textSize="40sp" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/but_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="tapTheNumber"
            android:text="@string/number_1" />

        <Button
            android:id="@+id/but_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="tapTheNumber"
            android:text="@string/number_2" />

        <Button
            android:id="@+id/but_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="tapTheNumber"
            android:text="@string/number_3" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/but_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="tapTheNumber"
            android:text="@string/number_4" />

        <Button
            android:id="@+id/but_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="tapTheNumber"
            android:text="@string/number_5" />

        <Button
            android:id="@+id/but_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="tapTheNumber"
            android:text="@string/number_6" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/but_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="tapTheNumber"
            android:text="@string/number_7" />

        <Button
            android:id="@+id/but_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="tapTheNumber"
            android:text="@string/number_8" />

        <Button
            android:id="@+id/but_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="tapTheNumber"
            android:text="@string/number_9" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/but_fifqi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="tapTheNumber"
            android:text="@string/number_fifqi" />

        <Button
            android:id="@+id/but_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="tapTheNumber"
            android:text="@string/number_0" />

        <Button
            android:id="@+id/but_diez"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="tapTheNumber"
            android:text="@string/number_diez" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/but_call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone_call"
            android:onClick="startCall" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/but_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone_clear"
            android:onClick="clearNumberPlate" />
    </TableRow>

</TableLayout>